--- a/SGT10EJ1/Views/Home/Index.cshtml
+++ b/SGT10EJ1/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Welcome</h1>
     <form asp-action="" >
         <input type="hidden" name="potato" value="a" />
-        <input type="submit" value="Comprobar" />
+        <input class="btn btn-primary" type="submit" value="Comprobar" />
         <p>Conexión: @Model</p>
     </form>
 </div>
